@@ -1,8 +1,11 @@
-# BackEnd dependencies and build
+# Git clone, after that install dependencies:
+[backend/local/start_resources.sh](backend/local/start_resources.sh)
+
+# BackEnd build
 ####Dependencies
-* Maven 3, Java 8, Docker
+* Maven 3, Java 21, Docker, MySQLV8
 ####Build
-* `mvn spring-boot:run -P dev|prod`
+* `mvn spring-boot:run -P dev|prod "-Dspring-boot.run.jvmArguments=--add-opens java.base/java.lang=ALL-UNNAMED"`
 
 # FrontEnd dependencies and build
 ####Dependencies
